# ifj20-go-compiler

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  rozdeleni  rozsireni
doc/: bibliography.bib  documentation.tex
presentation/: HelloWorld.c  incorrect.go  incorrect_output  main.tex
src/: Makefile  ast.c  ast.h  cftest.c  code_generator.c  code_generator.h  code_generator_simple.c  compiler.c  compiler.h  control_flow.c  control_flow.h  mutable_string.c  mutable_string.h  optimiser.c  optimiser.h  parser.c  parser.h  precedence_parser.c  precedence_parser.h  scanner.c  scanner.h  scanner_static.h  stacks.c  stacks.h  stderr_message.c  stderr_message.h  symtable.c  symtable.h  variable_vector.c  variable_vector.h  xml_gen.h  xml_gen_impl.cpp  xml_gen_impl.h
src/cftest/: code_generator_dummy.c
src/debug_tools/: ast_print.c  code_generator_dummy.c
src/tests/: mutable_string.cpp  parser_scanner.cpp  scanner.cpp  stdin_mock_test.h  symbol_table.cpp  tests_common.h
